internal/kgateway/translator/gateway/testutils/outputs/traffic-policy/extauth.yaml
Listeners:
- address:
    socketAddress:
      address: '::'
      ipv4Compat: true
      portValue: 8080
  filterChains:
  - filters:
    - name: envoy.filters.network.http_connection_manager
      typedConfig:
        '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
        httpFilters:
        - disabled: true
          name: global_disable/ext_auth
          typedConfig:
            '@type': type.googleapis.com/envoy.extensions.filters.http.set_metadata.v3.Config
            metadata:
            - metadataNamespace: dev.kgateway.disable_ext_auth
              value:
                extauth_disable: true
        - disabled: true
          name: ext_auth/infra/basic-extauth
          typedConfig:
            '@type': type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz
            filterEnabledMetadata:
              filter: dev.kgateway.disable_ext_auth
              invert: true
              path:
              - key: extauth_disable
              value:
                boolMatch: true
            grpcService:
              envoyGrpc:
                clusterName: kube_infra_ext-authz_9000
        - disabled: true
          name: ext_auth/infra/basic-gw-extauth
          typedConfig:
            '@type': type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz
            filterEnabledMetadata:
              filter: dev.kgateway.disable_ext_auth
              invert: true
              path:
              - key: extauth_disable
              value:
                boolMatch: true
            grpcService:
              envoyGrpc:
                clusterName: kube_infra_ext-authz_9000
        - disabled: true
          name: ext_auth/infra/section-name-gw-extauth
          typedConfig:
            '@type': type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz
            filterEnabledMetadata:
              filter: dev.kgateway.disable_ext_auth
              invert: true
              path:
              - key: extauth_disable
              value:
                boolMatch: true
            grpcService:
              envoyGrpc:
                clusterName: kube_infra_ext-authz_9000
        - name: envoy.filters.http.router
          typedConfig:
            '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
        mergeSlashes: true
        normalizePath: true
        rds:
          configSource:
            ads: {}
            resourceApiVersion: V3
          routeConfigName: http1
        statPrefix: http
        useRemoteAddress: true
    name: http1
  name: http1~http2
- address:
    socketAddress:
      address: '::'
      ipv4Compat: true
      portValue: 8443
  filterChains:
  - filterChainMatch:
      serverNames:
      - tls.example.com
    filters:
    - name: envoy.filters.network.http_connection_manager
      typedConfig:
        '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
        httpFilters:
        - disabled: true
          name: global_disable/ext_auth
          typedConfig:
            '@type': type.googleapis.com/envoy.extensions.filters.http.set_metadata.v3.Config
            metadata:
            - metadataNamespace: dev.kgateway.disable_ext_auth
              value:
                extauth_disable: true
        - disabled: true
          name: ext_auth/infra/basic-extauth
          typedConfig:
            '@type': type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz
            filterEnabledMetadata:
              filter: dev.kgateway.disable_ext_auth
              invert: true
              path:
              - key: extauth_disable
              value:
                boolMatch: true
            grpcService:
              envoyGrpc:
                clusterName: kube_infra_ext-authz_9000
        - disabled: true
          name: ext_auth/infra/basic-gw-extauth
          typedConfig:
            '@type': type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz
            filterEnabledMetadata:
              filter: dev.kgateway.disable_ext_auth
              invert: true
              path:
              - key: extauth_disable
              value:
                boolMatch: true
            grpcService:
              envoyGrpc:
                clusterName: kube_infra_ext-authz_9000
        - disabled: true
          name: ext_auth/infra/section-name-gw-extauth
          typedConfig:
            '@type': type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz
            filterEnabledMetadata:
              filter: dev.kgateway.disable_ext_auth
              invert: true
              path:
              - key: extauth_disable
              value:
                boolMatch: true
            grpcService:
              envoyGrpc:
                clusterName: kube_infra_ext-authz_9000
        - name: envoy.filters.http.router
          typedConfig:
            '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
        mergeSlashes: true
        normalizePath: true
        rds:
          configSource:
            ads: {}
            resourceApiVersion: V3
          routeConfigName: tls1
        statPrefix: http
        useRemoteAddress: true
    name: tls1
    transportSocket:
      name: envoy.transport_sockets.tls
      typedConfig:
        '@type': type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
        commonTlsContext:
          tlsCertificates:
          - certificateChain:
              inlineBytes: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUVQVENDQWlXZ0F3SUJBZ0lCQURBTkJna3Foa2lHOXcwQkFRc0ZBREFiTVFvd0NBWURWUVFEREFFcU1RMHcKQ3dZRFZRUUtEQVJ5YjI5ME1CNFhEVEl6TVRFd09ERTJORFExTjFvWERUTXpNVEV3TlRFMk5EUTFOMW93SGpFSwpNQWdHQTFVRUF3d0JLakVRTUE0R0ExVUVDZ3dIWjJGMFpYZGhlVENDQVNJd0RRWUpLb1pJaHZjTkFRRUJCUUFECmdnRVBBRENDQVFvQ2dnRUJBTit0V2hoa3QvNVFQTUw4UGorZ1JScUM1blp5TG9Sem5iK3hPazdQTVozRndtYUcKNThvbVhPRm16ZmJlK0VaaGE0UlBhK1BpdFhFbitjZkM5allYRU42dGM1WExWUjlKK1dCRXRhSUpoZlh2VzAvbgpra [...]
            privateKey:
              inlineBytes: LS0tLS1CRUdJTiBQUklWQVRFIEtFWS0tLS0tCk1JSUV1d0lCQURBTkJna3Foa2lHOXcwQkFRRUZBQVNDQktVd2dnU2hBZ0VBQW9JQkFRRGZyVm9ZWkxmK1VEekMKL0Q0L29FVWFndVoyY2k2RWM1Mi9zVHBPenpHZHhjSm1odWZLSmx6aFpzMzIzdmhHWVd1RVQydmo0clZ4Si9uSAp3dlkyRnhEZXJYT1Z5MVVmU2ZsZ1JMV2lDWVgxNzF0UDU1SVIrTldtSkhBUUV0aXg3a3NzV0lNRXd5eHR1ZlMxCkxrUkRyaFNGNW1CU0lYbm51czFzRU5jdUVmZVZ1SVUyclB5RlRxVzVKcHZ0dHhWQWsreE8vKzk3UTE4QWxvc3gKdTBidG9HYjR2NXZoVUZBUVgyamk1Yk0wLzA3S2VkTUczbkI2bktFNW16R0FZbC9lUXoxekpJSUlmZDA3NTZWYQpDb [...]
          tlsParams: {}
  - filterChainMatch:
      serverNames:
      - no-auth-tls.example.com
    filters:
    - name: envoy.filters.network.http_connection_manager
      typedConfig:
        '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
        httpFilters:
        - disabled: true
          name: global_disable/ext_auth
          typedConfig:
            '@type': type.googleapis.com/envoy.extensions.filters.http.set_metadata.v3.Config
            metadata:
            - metadataNamespace: dev.kgateway.disable_ext_auth
              value:
                extauth_disable: true
        - disabled: true
          name: ext_auth/infra/basic-gw-extauth
          typedConfig:
            '@type': type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz
            filterEnabledMetadata:
              filter: dev.kgateway.disable_ext_auth
              invert: true
              path:
              - key: extauth_disable
              value:
                boolMatch: true
            grpcService:
              envoyGrpc:
                clusterName: kube_infra_ext-authz_9000
        - name: envoy.filters.http.router
          typedConfig:
            '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
        mergeSlashes: true
        normalizePath: true
        rds:
          configSource:
            ads: {}
            resourceApiVersion: V3
          routeConfigName: tls2
        statPrefix: http
        useRemoteAddress: true
    name: tls2
    transportSocket:
      name: envoy.transport_sockets.tls
      typedConfig:
        '@type': type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
        commonTlsContext:
          tlsCertificates:
          - certificateChain:
              inlineBytes: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUVQVENDQWlXZ0F3SUJBZ0lCQURBTkJna3Foa2lHOXcwQkFRc0ZBREFiTVFvd0NBWURWUVFEREFFcU1RMHcKQ3dZRFZRUUtEQVJ5YjI5ME1CNFhEVEl6TVRFd09ERTJORFExTjFvWERUTXpNVEV3TlRFMk5EUTFOMW93SGpFSwpNQWdHQTFVRUF3d0JLakVRTUE0R0ExVUVDZ3dIWjJGMFpYZGhlVENDQVNJd0RRWUpLb1pJaHZjTkFRRUJCUUFECmdnRVBBRENDQVFvQ2dnRUJBTit0V2hoa3QvNVFQTUw4UGorZ1JScUM1blp5TG9Sem5iK3hPazdQTVozRndtYUcKNThvbVhPRm16ZmJlK0VaaGE0UlBhK1BpdFhFbitjZkM5allYRU42dGM1WExWUjlKK1dCRXRhSUpoZlh2VzAvbgpra [...]
            privateKey:
              inlineBytes: LS0tLS1CRUdJTiBQUklWQVRFIEtFWS0tLS0tCk1JSUV1d0lCQURBTkJna3Foa2lHOXcwQkFRRUZBQVNDQktVd2dnU2hBZ0VBQW9JQkFRRGZyVm9ZWkxmK1VEekMKL0Q0L29FVWFndVoyY2k2RWM1Mi9zVHBPenpHZHhjSm1odWZLSmx6aFpzMzIzdmhHWVd1RVQydmo0clZ4Si9uSAp3dlkyRnhEZXJYT1Z5MVVmU2ZsZ1JMV2lDWVgxNzF0UDU1SVIrTldtSkhBUUV0aXg3a3NzV0lNRXd5eHR1ZlMxCkxrUkRyaFNGNW1CU0lYbm51czFzRU5jdUVmZVZ1SVUyclB5RlRxVzVKcHZ0dHhWQWsreE8vKzk3UTE4QWxvc3gKdTBidG9HYjR2NXZoVUZBUVgyamk1Yk0wLzA3S2VkTUczbkI2bktFNW16R0FZbC9lUXoxekpJSUlmZDA3NTZWYQpDb [...]
          tlsParams: {}
  listenerFilters:
  - name: envoy.filters.listener.tls_inspector
    typedConfig:
      '@type': type.googleapis.com/envoy.extensions.filters.listener.tls_inspector.v3.TlsInspector
  name: tls1~tls2
Routes:
- ignorePortInHostMatching: true
  name: http1
  typedPerFilterConfig:
    ext_auth/infra/basic-gw-extauth:
      '@type': type.googleapis.com/envoy.config.route.v3.FilterConfig
      config: {}
  virtualHosts:
  - domains:
    - example.com
    name: http1~http2~example_com
    routes:
    - match:
        pathSeparatedPrefix: /example-route
      name: http1~http2~example_com-route-0-httproute-example-route-infra-0-0-matcher-0
      route:
        cluster: kube_infra_example-svc_80
        clusterNotFoundResponseCode: INTERNAL_SERVER_ERROR
      typedPerFilterConfig:
        ext_auth/infra/basic-extauth:
          '@type': type.googleapis.com/envoy.config.route.v3.FilterConfig
          config: {}
    typedPerFilterConfig:
      ext_auth/infra/section-name-gw-extauth:
        '@type': type.googleapis.com/envoy.config.route.v3.FilterConfig
        config: {}
  - domains:
    - no-auth.example.com
    name: http1~http2~no-auth_example_com
    routes:
    - match:
        pathSeparatedPrefix: /example-route-no-extauth
      name: http1~http2~no-auth_example_com-route-0-httproute-example-route-no-extauth-infra-0-0-matcher-0
      route:
        cluster: kube_infra_example-svc_80
        clusterNotFoundResponseCode: INTERNAL_SERVER_ERROR
- ignorePortInHostMatching: true
  name: tls1
  typedPerFilterConfig:
    ext_auth/infra/basic-gw-extauth:
      '@type': type.googleapis.com/envoy.config.route.v3.FilterConfig
      config: {}
    ext_auth/infra/section-name-gw-extauth:
      '@type': type.googleapis.com/envoy.config.route.v3.FilterConfig
      config: {}
  virtualHosts:
  - domains:
    - tls.example.com
    name: tls1~tls_example_com
    requireTls: ALL
    routes:
    - match:
        pathSeparatedPrefix: /example-route-tls-extension-ref
      name: tls1~tls_example_com-route-0-httproute-example-tls-route-extension-ref-infra-1-0-matcher-0
      route:
        cluster: kube_infra_example-svc_80
        clusterNotFoundResponseCode: INTERNAL_SERVER_ERROR
      typedPerFilterConfig:
        ext_auth/infra/basic-extauth:
          '@type': type.googleapis.com/envoy.config.route.v3.FilterConfig
          config: {}
    - match:
        pathSeparatedPrefix: /example-route-tls-section-name
      name: tls1~tls_example_com-route-1-httproute-example-tls-route-extension-ref-infra-0-0-route-name-matcher-0
      route:
        cluster: kube_infra_example-svc_80
        clusterNotFoundResponseCode: INTERNAL_SERVER_ERROR
      typedPerFilterConfig:
        ext_auth/infra/basic-extauth:
          '@type': type.googleapis.com/envoy.config.route.v3.FilterConfig
          config: {}
    - match:
        pathSeparatedPrefix: /example-tls-sibling-route
      name: tls1~tls_example_com-route-2-httproute-example-tls-sibling-route-infra-0-0-matcher-0
      route:
        cluster: kube_infra_example-svc_80
        clusterNotFoundResponseCode: INTERNAL_SERVER_ERROR
    - match:
        pathSeparatedPrefix: /example-tls-route
      name: tls1~tls_example_com-route-3-httproute-example-tls-route-infra-0-0-matcher-0
      route:
        cluster: kube_infra_example-svc_80
        clusterNotFoundResponseCode: INTERNAL_SERVER_ERROR
      typedPerFilterConfig:
        ext_auth/infra/basic-extauth:
          '@type': type.googleapis.com/envoy.config.route.v3.FilterConfig
          config: {}
- ignorePortInHostMatching: true
  name: tls2
  typedPerFilterConfig:
    ext_auth/infra/basic-gw-extauth:
      '@type': type.googleapis.com/envoy.config.route.v3.FilterConfig
      config: {}
  virtualHosts:
  - domains:
    - no-auth-tls.example.com
    name: tls2~no-auth-tls_example_com
    requireTls: ALL
    routes:
    - match:
        pathSeparatedPrefix: /example-route-tls-no-extauth
      name: tls2~no-auth-tls_example_com-route-0-httproute-example-tls-route-no-extauth-infra-0-0-matcher-0
      route:
        cluster: kube_infra_example-svc_80
        clusterNotFoundResponseCode: INTERNAL_SERVER_ERROR
